compilateurMinCaml/tests/typechecking/invalid/fneg.ml
print_int (int_of_float (-.(true)))